Finished UI for Azure functions as connection param

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -51,6 +51,7 @@
   "11qu8f": "Enter a valid integer.",
   "14lYtE": "18",
   "1A1P5b": "Comment",
+  "1ANUHk": "Loading functions...",
   "1D047X": "Required. The value to convert to XML.",
   "1Fn5n+": "Required. The URI encoded string.",
   "1NBvKu": "Convert the parameter argument to a floating-point number",
@@ -355,6 +356,7 @@
   "L0UAzs": "Returns the day of week component of a string timestamp",
   "L4RJF0": "There are no results for your search",
   "LBbhCu": "Delete Workflow Graph",
+  "LCXZLM": "Loading Function Apps...",
   "LJmfmK": "See More",
   "LMB8am": "Creating...",
   "LOwePI": "Invalid type on split on value '{splitOn}', split on not in array.",
@@ -564,6 +566,7 @@
   "XbtEq9": "Count",
   "Xj0Gr/": "Target schema element cannot be deleted.",
   "XkBxv5": "Select a target schema",
+  "Xkt2vD": "Select a function app function",
   "Xnn0uj": "Request",
   "XqamWZ": "Delete",
   "XsktQ/": "Limit Logic Apps to not include workflow metadata headers in the response.",
@@ -646,6 +649,7 @@
   "_11qu8f.comment": "Error validation message",
   "_14lYtE.comment": "Hour of the day",
   "_1A1P5b.comment": "Comment Label",
+  "_1ANUHk.comment": "Message to show under the loading icon when loading functions",
   "_1D047X.comment": "Required string parameter to be converted using xml function",
   "_1Fn5n+.comment": "Required URI encoded string parameter to be converted using uriComponentToBinary function",
   "_1NBvKu.comment": "Label for description of custom float Function",
@@ -950,6 +954,7 @@
   "_L0UAzs.comment": "Label for description of custom dayOfWeek Function",
   "_L4RJF0.comment": "Text for when no tokens match search query",
   "_LBbhCu.comment": "Title for graph node",
+  "_LCXZLM.comment": "Text for loading function apps",
   "_LJmfmK.comment": "Click to view more token options",
   "_LMB8am.comment": "Button text to show a connection is being created",
   "_LOwePI.comment": "Error message for when split on array is invalid.",
@@ -1159,6 +1164,7 @@
   "_XbtEq9.comment": "title for retry count setting",
   "_Xj0Gr/.comment": "Message informing that target element cannot be removed",
   "_XkBxv5.comment": "Target schema dropdown placeholder",
+  "_Xkt2vD.comment": "Label for function app selection",
   "_Xnn0uj.comment": "Header text for request",
   "_XqamWZ.comment": "Label of Delete Token Button",
   "_XsktQ/.comment": "description of workflow headers on response setting",
@@ -1325,6 +1331,7 @@
   "_iq+tiv.comment": "Hour of the day",
   "_iql+jn.comment": "This is a period in time in seconds. {seconds} is replaced by the number and s is an abbreviation of seconds",
   "_isnFBi.comment": "Message on switching levels with nodes/mappings not connected to a target schema node",
+  "_ittN0l.comment": "Message to show when no functions are found",
   "_iy8rNf.comment": "Button text for running test",
   "_j1VU25.comment": "Timezone value ",
   "_j2MU0b.comment": "Label for description of custom removeProperty Function",
@@ -1738,6 +1745,7 @@
   "iq+tiv": "11",
   "iql+jn": "{seconds}s",
   "isnFBi": "Elements and mappings not connected to a target element are removed.",
+  "ittN0l": "No resources of this type found under this subscription.",
   "iy8rNf": "Test",
   "j1VU25": "(UTC+14:00) Kiritimati Island",
   "j2MU0b": "Returns an object with a property removed",
