Fixed optional parameter visibility, dropdown addition bugs

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1200,6 +1200,7 @@
   "_aAXnqw.comment": "Required number of occurrences to get nthIndexOf function with",
   "_aGyVJT.comment": "Required number parameter to get number of objects to remove for skip function",
   "_aH9SV7.comment": "Timezone value ",
+  "_aJxefp.comment": "Text for add new parameter button",
   "_aK4iLW.comment": "title for data handling setting section",
   "_ahsVI/.comment": "OAuth Pfx Placeholder Text",
   "_amRYtC.comment": "Error validation message",
@@ -1614,6 +1615,7 @@
   "aAXnqw": "Required. The number of the occurrence of the substring to find.",
   "aGyVJT": "Required. The number of objects to remove from the front of Collection. Must be a positive integer.",
   "aH9SV7": "(UTC+05:00) Ashgabat, Tashkent",
+  "aJxefp": "Add new parameters",
   "aK4iLW": "Data Handling",
   "ahsVI/": "Enter Pfx",
   "amRYtC": "Enter a valid float.",
