Allow target schema to be traversed on canvas without source schema being loaded

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1301,6 +1301,7 @@
   "_gu9o9z.comment": "Label for description of custom iterationIndexes Function",
   "_h1lQDa.comment": "Modal Title text",
   "_h40rpg.comment": "description of retry interval setting",
+  "_h6vVbX.comment": "Message to add a source schema",
   "_hBLPXK.comment": "Timezone value ",
   "_hN7iBP.comment": "A duration of time shown in seconds",
   "_hPM6iC.comment": "Label for description of custom sub Function",
@@ -1716,6 +1717,7 @@
   "gu9o9z": "When used inside until loop, this function returns the current iteration index of the specified loop.",
   "h1lQDa": "Enter or paste a sample JSON payload.",
   "h40rpg": "Specify interval in ISO 8601 format.",
+  "h6vVbX": "Add a source schema first, then select elements to build your map",
   "hBLPXK": "(UTC-04:00) Georgetown, La Paz, Manaus, San Juan",
   "hN7iBP": "{seconds, plural, one {# second} other {# seconds}}",
   "hPM6iC": "Returns the result from subtracting two numbers",
