adding popover for repeating elements

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1207,7 +1207,6 @@
   "_auUI93.comment": "label to inform to upload or select source schema to be used",
   "_b9/1dK.comment": "A placeholder for the dictionary value field",
   "_b9P8SA.comment": "Exception for unsupported token types",
-  "_bCQ6JT.comment": "Label for array connection",
   "_bG9rjv.comment": "Filter by Actions category of connectors",
   "_bGtEPd.comment": "delete button",
   "_bIyTi7.comment": "Subscription dropdown label",
@@ -1338,6 +1337,7 @@
   "_j1VU25.comment": "Timezone value ",
   "_j2MU0b.comment": "Label for description of custom removeProperty Function",
   "_j39557.comment": "Label for description of custom variables Function",
+  "_j5z8Vd.comment": "Label for array connection",
   "_jA6Wrp.comment": "label to inform to upload or select target schema to be used",
   "_jHHF/u.comment": "Label for description of custom rand Function",
   "_jKsMS6.comment": "Required expression parameter to apply not function",
@@ -1623,7 +1623,6 @@
   "auUI93": "Add or select a source schema to use for your map.",
   "b9/1dK": "Value",
   "b9P8SA": "Unsupported Token Type: {controls}",
-  "bCQ6JT": "Array Mapping",
   "bG9rjv": "Actions",
   "bGtEPd": "Delete",
   "bIyTi7": "Subscription",
@@ -1754,6 +1753,7 @@
   "j1VU25": "(UTC+14:00) Kiritimati Island",
   "j2MU0b": "Returns an object with a property removed",
   "j39557": "Returns the value of the variable specified.",
+  "j5z8Vd": "Repeating",
   "jA6Wrp": "Add or select a target schema to use for your map.",
   "jHHF/u": "Returns a random integer from a specified range, which is inclusive only at the starting end.",
   "jKsMS6": "Required. The expression that will be negated.",
