started to create context menu

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -310,6 +310,7 @@
   "H8bEUn": "Required. The number that Subtrahend is removed from.",
   "HDqP2g": "Required. The key name of the form data value to return.",
   "HJIZrG": "More diagnostic information: x-ms-client-request-id is '{clientRequestId}'.",
+  "HNr+xz": "Delete",
   "HQ8/tk": "Button to add dynamic content if TokenPicker is shown",
   "HXLutF": "Key",
   "HfrUId": "Please select a card to see the content",
@@ -908,6 +909,7 @@
   "_H8bEUn.comment": "Required number parameter to be minused in sub function",
   "_HDqP2g.comment": "Required string parameter to be used as key for triggerFormDataValue function",
   "_HJIZrG.comment": "Diagnostics information on error message",
+  "_HNr+xz.comment": "Remove item from canvas",
   "_HQ8/tk.comment": "Text for if image does not show up",
   "_HXLutF.comment": "Accessibility Label for dictionary text key field",
   "_HfrUId.comment": "Empty Panel Content Message",
