delete source and func nodes works

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -310,7 +310,6 @@
   "H8bEUn": "Required. The number that Subtrahend is removed from.",
   "HDqP2g": "Required. The key name of the form data value to return.",
   "HJIZrG": "More diagnostic information: x-ms-client-request-id is '{clientRequestId}'.",
-  "HNr+xz": "Delete",
   "HQ8/tk": "Button to add dynamic content if TokenPicker is shown",
   "HXLutF": "Key",
   "HfrUId": "Please select a card to see the content",
@@ -548,6 +547,7 @@
   "WOOYW1": "Actions perform operations on data or communicate between systems to execute.",
   "WS9kXD": "Required. The first integer in the array.",
   "WUe3DY": "Shorthand for trigger().outputs",
+  "WcnIF8": "Remove",
   "WgoP7R": "Returns the result from multiplying the two numbers",
   "WnU9v0": "A managed identity is not configured on the logic app.",
   "X4gDhV": "Tenant",
@@ -909,7 +909,6 @@
   "_H8bEUn.comment": "Required number parameter to be minused in sub function",
   "_HDqP2g.comment": "Required string parameter to be used as key for triggerFormDataValue function",
   "_HJIZrG.comment": "Diagnostics information on error message",
-  "_HNr+xz.comment": "Remove item from canvas",
   "_HQ8/tk.comment": "Text for if image does not show up",
   "_HXLutF.comment": "Accessibility Label for dictionary text key field",
   "_HfrUId.comment": "Empty Panel Content Message",
@@ -1147,6 +1146,7 @@
   "_WOOYW1.comment": "Description of what Actions are, on a tooltip about Actions",
   "_WS9kXD.comment": "Required number parameter to identify lower bound in range function",
   "_WUe3DY.comment": "Label for description of custom triggerOutputs Function",
+  "_WcnIF8.comment": "Remove card from canvas",
   "_WgoP7R.comment": "Label for description of custom mul Function",
   "_WnU9v0.comment": "Error message when no identity is associated",
   "_X4gDhV.comment": "Tenant Label Display Name",
