started on edge delete, needs work still

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1609,6 +1609,7 @@
   "_zbtUQ/.comment": "Timezone value ",
   "_zcZpHT.comment": "Label for description of custom parseDateTime Function",
   "_zggBvC.comment": "Timezone value ",
+  "_ziXw25.comment": "Remove line from canvas",
   "_ziYCiA.comment": "Header text for summary",
   "_zjDJwP.comment": "This is an option in a dropdown where users can select type Float for their parameter.",
   "_znGyyU.comment": "Label for description of custom addToTime Function",
@@ -2025,6 +2026,7 @@
   "zbtUQ/": "(UTC+08:30) Pyongyang",
   "zcZpHT": "Converts a string, with optionally a locale and a format to a date",
   "zggBvC": "(UTC+03:00) Nairobi",
+  "ziXw25": "Delete",
   "ziYCiA": "Summary",
   "zjDJwP": "Float",
   "znGyyU": "Adds an integer number of a specified unit of time to a string timestamp passed in",
