Resolve mission aria-labels

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -76,6 +76,7 @@
   "23uZn1": "Global search",
   "2CXCOt": "Select a file to upload",
   "2Cdt4p": "Enable split-on to start an instance of the workflow per item in the selected array. Each instance can also have a distinct tracking id.",
+  "2JA3gY": "Expand tree node",
   "2K2fAj": "End time",
   "2NXYYu": "Search",
   "2NYPLt": "(UTC-03:30) Newfoundland",
@@ -102,6 +103,7 @@
   "3TD2V5": "(UTC+06:00) Dhaka",
   "3Y8a6G": "Required parameters {parameters} not set or invalid",
   "3afjx+": "(UTC+09:00) Chita",
+  "3cZZKj": "Divider",
   "3eeli7": "Select a source schema",
   "3ewBbk": "The entered identity is not associated with this Logic App.",
   "3jlz+B": "(UTC+03:30) Tehran",
@@ -109,6 +111,7 @@
   "3kI7xF": "Faulted",
   "3qG1VT": "Tracked Properties",
   "3rzrWf": "Required. The object to remove the property from.",
+  "3sJlV+": "Close code view",
   "3vCCY7": "Required. The number of a specified time unit to subtract.",
   "3vqfeV": "3",
   "4/kJ8D": "(UTC+04:00) Yerevan",
@@ -477,6 +480,7 @@
   "SCCE6s": "Password",
   "SGxmEY": "Enter a Dictionary",
   "SKXopi": "Convert the parameter to an integer",
+  "SLJkRn": "Remove input",
   "SLZ0n4": "Checks if the string starts with a value (case-insensitive, invariant culture)",
   "SXb47U": "{minutes}m",
   "SY04wn": "Required. The name of the action with a form-data or form-encoded response.",
@@ -674,6 +678,7 @@
   "_23uZn1.comment": "Button text for global search",
   "_2CXCOt.comment": "Placeholder for input to load a schema file",
   "_2Cdt4p.comment": "description of the split on setting",
+  "_2JA3gY.comment": "Expand tree node",
   "_2K2fAj.comment": "Label text for retry end time",
   "_2NXYYu.comment": "Search",
   "_2NYPLt.comment": "Timezone value ",
@@ -700,6 +705,7 @@
   "_3TD2V5.comment": "Timezone value ",
   "_3Y8a6G.comment": "Error message to show when required parameters are not set or invalid",
   "_3afjx+.comment": "Timezone value ",
+  "_3cZZKj.comment": "Aria label for divider",
   "_3eeli7.comment": "Source schema dropdown placeholder",
   "_3ewBbk.comment": "error message for invalid user",
   "_3jlz+B.comment": "Timezone value ",
@@ -707,6 +713,7 @@
   "_3kI7xF.comment": "This is a status message to be shown in a monitoring view",
   "_3qG1VT.comment": "title for tracked properties setting",
   "_3rzrWf.comment": "Required object parameter to identify from which object to remove property from",
+  "_3sJlV+.comment": "Close code view button",
   "_3vCCY7.comment": "Required integer parameter to subtract to time",
   "_3vqfeV.comment": "Hour of the day",
   "_4/kJ8D.comment": "Timezone value ",
@@ -1075,6 +1082,7 @@
   "_SCCE6s.comment": "Basic Password Label Display Name",
   "_SGxmEY.comment": "Placeholder for empty collapsed dictionary",
   "_SKXopi.comment": "Label for description of custom int Function",
+  "_SLJkRn.comment": "Remove input",
   "_SLZ0n4.comment": "Label for description of custom startsWith Function",
   "_SXb47U.comment": "This is a period in time in seconds. {minutes} is replaced by the number and m is an abbreviation of minutes",
   "_SY04wn.comment": "Required string parameter to identify action name for formDataMultiValues function",
@@ -1507,9 +1515,11 @@
   "_tMRPnG.comment": "Label for description of custom workflow Function",
   "_tNoZx2.comment": "Parameter Field Type Title",
   "_tP+5fA.comment": "Timezone value ",
+  "_tRgTTN.comment": "Expand/collapse target schema",
   "_tUlRzr.comment": "Authentication type",
   "_tZj2Xn.comment": "Label for description of custom greater Function",
   "_taPCmY.comment": "Required integer parameter to subtract hours from time",
+  "_td5//c.comment": "Collapse tree node",
   "_teZwo6.comment": "Timezone value ",
   "_ti5TEd.comment": "Text for cancel button",
   "_tsmuoF.comment": "Column header for connection display name",
@@ -1924,9 +1934,11 @@
   "tMRPnG": "This function provides you details for the workflow itself at runtime",
   "tNoZx2": "Type",
   "tP+5fA": "(UTC+06:00) Novosibirsk",
+  "tRgTTN": "Expand/collapse target schema",
   "tUlRzr": "Basic",
   "tZj2Xn": "Returns true if the first argument is greater than the second",
   "taPCmY": "Required. The number of hours to add. Can be negative to subtract hours.",
+  "td5//c": "Collapse tree node",
   "teZwo6": "(UTC+10:00) Hobart",
   "ti5TEd": "Cancel",
   "tsmuoF": "Display Name",
