--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1227,6 +1227,7 @@
   "_bwfJdj.comment": "Text to show which node the target node is run after",
   "_bx3qeC.comment": "Timezone value ",
   "_bxhkTi.comment": "Test tab parameters description",
+  "_byTBrn.comment": "Filter by Custom category of connectors",
   "_bzF/qn.comment": "Required collection parameter to apply take function on",
   "_c/+j08.comment": "Do, as in \"to do an action\"",
   "_c1XmvN.comment": "Timezone value ",
@@ -1646,6 +1647,7 @@
   "bwfJdj": "Run after {sourceNodeId}",
   "bx3qeC": "(UTC-03:00) Brasilia",
   "bxhkTi": "Provide parameters to test the output.",
+  "byTBrn": "Custom",
   "bzF/qn": "Required. The collection from where to take the first Count objects.",
   "c/+j08": "Do",
   "c1XmvN": "(UTC+13:00) Nuku'alofa",
