Main optional gateway functionality finished

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -2,6 +2,7 @@
   "+20fdv": "Invalid properties '{0}' for authentication type '{1}'.",
   "+3efoo": "No schema is added",
   "+DxBpE": "Failed loading the schema. Please try again.",
+  "+JCU+Y": "Select this if you are configuring an on-prem connection",
   "+W9fkq": "(UTC+08:00) Kuala Lumpur, Singapore",
   "+dlOgj": "(UTC-05:00) Haiti",
   "+g+mch": "Returns the body for a part in a multipart output of an action",
@@ -607,6 +608,7 @@
   "_+20fdv.comment": "Error message when having multiple invalid authentication properties",
   "_+3efoo.comment": "Placeholder when no schema has been added",
   "_+DxBpE.comment": "Load schema error message",
+  "_+JCU+Y.comment": "Tooltip for on-prem gateway connection checkbox",
   "_+W9fkq.comment": "Timezone value ",
   "_+dlOgj.comment": "Timezone value ",
   "_+g+mch.comment": "Label for description of custom multipartBody Function",
@@ -1487,6 +1489,7 @@
   "_r7vZ5a.comment": "title for retry minimum interval setting",
   "_r8aZXs.comment": "Label for description of custom actions Function",
   "_r9SVE4.comment": "This is an option in a dropdown where users can select type Integer for their parameter.",
+  "_rAwCdh.comment": "Checkbox label for using an on-premises gateway",
   "_rAyuzv.comment": "This is the boolean value for No",
   "_rCl53e.comment": "Label for the title for panel header card",
   "_rDDPpJ.comment": "Authentication OAuth Secret Type Label",
@@ -1908,6 +1911,7 @@
   "r7vZ5a": "Minimum Interval",
   "r8aZXs": "Enables an expression to derive its value from other JSON name and value pairs or the output of the runtime action",
   "r9SVE4": "Int",
+  "rAwCdh": "Connect via on-premises data gateway",
   "rAyuzv": "No",
   "rCl53e": "Card Title",
   "rDDPpJ": "Secret",
