--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -44,6 +44,7 @@
   "0meqK1": "(UTC-05:00) Bogota, Lima, Quito, Rio Branco",
   "0p+pJq": "Returns the remainder after dividing the two numbers (modulo)",
   "0qV0Qe": "Required. The string that may contain the value.",
+  "0qcKzG": "{parameterName} is no longer present in the operation schema. It should be removed before the workflow is re-saved.",
   "0uj1Li": "Returns a binary representation of an input data URI string",
   "0y5eia": "More commands",
   "1+Z8n9": "Required. The data URI to convert to String representation.",
@@ -60,6 +61,7 @@
   "1REk6u": "Enter a valid email.",
   "1TE0e8": "Required. The value to search the index of.",
   "1VRGCF": "Specify one or more expressions which must be true for the trigger to fire.",
+  "1YEc9e": "Enter a valid condition.",
   "1ZDLZA": "Learn more",
   "1ZSzl6": "Each run after configuration must have at least one status checked",
   "1ejxkP": "Secure Inputs",
@@ -128,6 +130,7 @@
   "4cVuMw": "Comments can only be added while editing the inputs of a step.",
   "4j2MEv": "Toggle Minimap",
   "4pm5yw": "Button to add dynamic content if TokenPicker is hidden",
+  "4sYR0J": "{parameterName} is required.",
   "4vcnOA": "Returns the minimum value in the input array of numbers",
   "4vmGh0": "Service request ID",
   "4wjJs0": "14",
@@ -297,6 +300,7 @@
   "G/CC5/": "Invalid split on format in '{splitOn}'.",
   "G0XYrd": "Required. The string that may contain the value.",
   "GAY7b8": "Returns the query from a URI",
+  "GCjJnP": "Enter a valid Json.",
   "GDUGlm": "Enter authority",
   "GLd3MU": "Required. The object to find inside the Within collection.",
   "GXXLuT": "Enter a valid boolean.",
@@ -320,6 +324,7 @@
   "HfrUId": "Please select a card to see the content",
   "HmcHoE": "Error fetching manifest",
   "HoQiVa": "Enter a valid datetime.",
+  "Hs5+Mk": "Enter a valid value for {parameterName}.",
   "HsO1Rd": "{addIcon} Install Gateway",
   "Hyp0Ao": "Remove parameter \"{parameterName}\" and its value",
   "HzS2gJ": "Dynamic content not supported as properties in authentication.",
@@ -649,6 +654,7 @@
   "_0meqK1.comment": "Timezone value ",
   "_0p+pJq.comment": "Label for description of custom mod Function",
   "_0qV0Qe.comment": "Required text parameter to apply indexOf function on",
+  "_0qcKzG.comment": "Unknown Parameter error message",
   "_0uj1Li.comment": "Label for description of custom decodeDataUri Function",
   "_0y5eia.comment": "Label for commands in panel header",
   "_1+Z8n9.comment": "Required dataUri string parameter to be converted using dataUriToString function",
@@ -665,6 +671,7 @@
   "_1REk6u.comment": "Error validation message",
   "_1TE0e8.comment": "Required text parameter to search indexOf function with",
   "_1VRGCF.comment": "description of tigger confition expression setting",
+  "_1YEc9e.comment": "Invalid Json",
   "_1ZDLZA.comment": "Text for learn more link",
   "_1ZSzl6.comment": "error message for deselection of last run after status",
   "_1ejxkP.comment": "title for the secure inputs setting",
@@ -733,6 +740,7 @@
   "_4cVuMw.comment": "Text to tell users why a comment is disabled",
   "_4j2MEv.comment": "Turn the minimap on or off",
   "_4pm5yw.comment": "Text for if image does not show up",
+  "_4sYR0J.comment": "Required Parameter error message",
   "_4vcnOA.comment": "Label for description of custom min Function",
   "_4vmGh0.comment": "Label text for retry service request ID",
   "_4wjJs0.comment": "Hour of the day",
@@ -902,6 +910,7 @@
   "_G/CC5/.comment": "Error message for invalid split on value.",
   "_G0XYrd.comment": "Required text parameter to apply nthIndexOf function on",
   "_GAY7b8.comment": "Label for description of custom uriQuery Function",
+  "_GCjJnP.comment": "Invalid Json",
   "_GDUGlm.comment": "Authority Placeholder Text",
   "_GLd3MU.comment": "Required object parameter to find for the contains function",
   "_GXXLuT.comment": "Error validation message",
@@ -925,6 +934,7 @@
   "_HfrUId.comment": "Empty Panel Content Message",
   "_HmcHoE.comment": "Error message when manifest fails to load",
   "_HoQiVa.comment": "Error validation message",
+  "_Hs5+Mk.comment": "Invalid Pattern error message",
   "_HsO1Rd.comment": "Option to install a new gateway, links to new page",
   "_Hyp0Ao.comment": "Tooltip for remove parameter button",
   "_HzS2gJ.comment": "Error message for when putting token in authentication property",
