Add rund and build sections

--- a/libs/vscode-extension/src/lib/docs/Overview.stories.mdx
+++ b/libs/vscode-extension/src/lib/docs/Overview.stories.mdx
@@ -8,18 +8,35 @@ Azure Logic Apps extension allows to quickly create, debug, manage, and deploy L
 
 ## Table of Contents
 
-- [Prerequisites](#prerequisites)
+- <a href="#prerequisites">Prerequisites</a>
+- <a href="#build">Build (Dev/Debug)</a>
+- <a href="#run">Run (Dev/Debug)</a>
 
-## Prerequisites
+<h2 id="prerequisites">Prerequisites</h2>
 
-- `git clone`, and run `npm install` in, the logic_apps_designer repo
-- Install nx if you haven't already - `npm install -g nx`
+- `git clone` and run `npm install` in the logic_apps_designer repo
+- Install nx if you haven't already `npm install -g nx`
 
-- .NET Core SDK 3.1 (https://dotnet.microsoft.com/en-us/download/dotnet/3.1)
-- Azure Functions Core Tools (https://github.com/Azure/azure-functions-core-tools or `npm i -g azure-functions-core-tools --unsafe-perm true`)
-- **VS Code Extensions:** Azure Tools, Azure Logic Apps (Standard)
+- Install [.NET 6.0 SDK](https://dotnet.microsoft.com/en-us/download/dotnet/6.0)
+- Install [Azure Functions Core Tools](https://github.com/Azure/azure-functions-core-tools) or `npm i -g azure-functions-core-tools --unsafe-perm true`
+- Install the following VS Code Extensions: [Azure Tools](https://marketplace.visualstudio.com/items?itemName=ms-vscode.vscode-node-azure-pack), [Azure Account](https://marketplace.visualstudio.com/items?itemName=ms-vscode.azure-account)
+  and [Azure Functions](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-azurefunctions)
 
-- Logic Apps workflow (folder - w/ schemas) - see steps to create below:
-  1.  In Azure Tools extension tab under Logic Apps (Standard), click the 'Create New Project' icon, and choose where you want the project folder
-  2.  Open that folder in VS Code, then go back to Logic Apps (Standard), and click 'Create New Workflow' -> Stateless -> Press Enter
-  3.  Make sure that ./Artifacts/Schemas exists within the project folder, and add an .xsd schema for testing (see the DM Overview doc for test data)
+<h2 id="build">Build (Dev/Debug)</h2>
+
+To build, run the following commands from the root of the repo folder:
+
+```bash
+npm run build:vscode-designer
+```
+
+<h2 id="run">Run (Dev/Debug)</h2>
+
+To run the VS Code extension (in debug mode):
+
+1.  Open the repo folder in VS Code
+2.  Click the 'Run and Debug' icon in the Activity bar on the left side of VS Code. You can also use the shortcut: `Ctrl`+`Shift`+`D`
+3.  Select 'Run Designer Extension In Dev Mode' in the dropdown at the top, then click the 'Start debugging' icon
+
+> As soon as a debugging session starts, a new VS Code workspace prompts with the running app, now you are able to add [breakpoints](https://code.visualstudio.com/docs/editor/debugging#_breakpoints) and
+> debug it with the [debug actions](https://code.visualstudio.com/docs/editor/debugging#_debug-actions)
