--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -208,6 +208,7 @@
   "9pdXmX": "(UTC+01:00) Amsterdam, Berlin, Bern, Rome, Stockholm, Vienna",
   "9pl7QP": "(UTC-04:00) Atlantic Time (Canada)",
   "9u/Ae3": "Returns true if both parameters are true",
+  "9x8hg8": "Edit in basic mode",
   "A5Ferh": "Source element removed from view.",
   "ADM1Z8": "Authentication Type",
   "AHB418": "Filter Actions",
@@ -398,6 +399,7 @@
   "MYgKHu": "Actions",
   "Mb+Eaq": "Bool",
   "Mb/Vp8": "Next failed",
+  "MfAdfx": "Edit in advanced mode",
   "Mgcs5s": "Enter a valid number.",
   "MirIsS": "Show code",
   "MmBfD1": "Unexpected error",
@@ -819,6 +821,7 @@
   "_9pdXmX.comment": "Timezone value ",
   "_9pl7QP.comment": "Timezone value ",
   "_9u/Ae3.comment": "Label for description of custom and Function",
+  "_9x8hg8.comment": "Button Label when clicked to swith to basic editor",
   "_A5Ferh.comment": "Message on removing source node",
   "_ADM1Z8.comment": "Label for Authentication Type dropdown",
   "_AHB418.comment": "Filter Actions",
@@ -1009,6 +1012,7 @@
   "_MYgKHu.comment": "Heading for a tooltip explaining Actions",
   "_Mb+Eaq.comment": "This is an option in a dropdown where users can select type Boolean for their parameter.",
   "_Mb/Vp8.comment": "Button indicating to go to the next page with failed options",
+  "_MfAdfx.comment": "Button Label when clicked to swith to advanced editor",
   "_Mgcs5s.comment": "Error validation message",
   "_MirIsS.comment": "Button to display the code view",
   "_MmBfD1.comment": "This is the default message shown in case of an error. It can be shown in multiple contexts but generally would be a notification",
