Finished parameter validation UX

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -151,7 +151,6 @@
   "6OSgRP": "Test map",
   "6PdOcy": "Cancel",
   "6XR3FS": "(UTC+09:30) Adelaide",
-  "6grB5C": "Invalid node settings",
   "6jiO7t": "Show run",
   "6jsWn/": "Required. The collection to search within.",
   "6kSpHL": "Required. The name of the action with a multipart response.",
@@ -351,6 +350,7 @@
   "Jaz3EC": "Converts a string timestamp passed in from a source time zone to a target time zone",
   "JbgTET": "Method",
   "Ji6663": "Returns true if a dictionary contains a key, if an array contains a value, or if a string contains a substring",
+  "Jil/Wa": "Invalid settings",
   "JjTfC7": "Required. The number to be formatted.",
   "JnlcZQ": "Name:",
   "JpthWY": "(UTC-03:00) Montevideo",
@@ -516,6 +516,7 @@
   "Tb2QLA": "Client request ID",
   "TgcgXE": "Tags",
   "Tiqnir": "Custom",
+  "Tmr/9e": "Invalid parameters",
   "ToPmjE": "(UTC-04:00) Cuiaba",
   "TqPfth": "(UTC+01:00) Brussels, Copenhagen, Madrid, Paris",
   "Twfck/": "Required. The number to multiply Multiplicand 1 with.",
@@ -764,7 +765,6 @@
   "_6OSgRP.comment": "Test map panel header",
   "_6PdOcy.comment": "Cancel",
   "_6XR3FS.comment": "Timezone value ",
-  "_6grB5C.comment": "Text to explain that there are invalid settings for this node",
   "_6jiO7t.comment": "Menu item text for show run",
   "_6jsWn/.comment": "Required collection parameter to apply contains function on",
   "_6kSpHL.comment": "Required string parameter to identify action name for multipartBody function",
@@ -964,6 +964,7 @@
   "_Jaz3EC.comment": "Label for description of custom convertTimeZone Function",
   "_JbgTET.comment": "Label text for request method",
   "_Ji6663.comment": "Label for description of custom contains Function",
+  "_Jil/Wa.comment": "Text to explain that there are invalid settings for this node",
   "_JjTfC7.comment": "Required value parameter to apply formatNumber function on",
   "_JnlcZQ.comment": "Label text for workflow name",
   "_JpthWY.comment": "Timezone value ",
@@ -1129,6 +1130,7 @@
   "_Tb2QLA.comment": "Label text for retry client request ID",
   "_TgcgXE.comment": "Label For Tags in About Panel",
   "_Tiqnir.comment": "Option text for table column type in table editor",
+  "_Tmr/9e.comment": "Text to explain that there are invalid parameters for this node",
   "_ToPmjE.comment": "Timezone value ",
   "_TqPfth.comment": "Timezone value ",
   "_Twfck/.comment": "Required number parameter to be multiplied in mul function",
