Update page name

--- a/libs/vscode-extension/src/lib/docs/Overview.stories.mdx
+++ b/libs/vscode-extension/src/lib/docs/Overview.stories.mdx
@@ -1,9 +1,9 @@
 import Architecture from '../../assets/architecture.png';
 import { Meta } from '@storybook/addon-docs';
 
-<Meta title="Docs/VS Code Extension" />
+<Meta title="Docs/VS Code Designer Extension" />
 
-# VS Code Extension - Overview
+# VS Code Designer Extension
 
 Azure Logic Apps extension allows to quickly create, debug, manage, and deploy Logic Apps directly from VS Code.
 
