[DM | Code view] Show message when no map definition is generated (#1505)
* Update Code View to show message when the map definition cant generate, and indent wrapped lines

* Reuse commonCodeEditorProps

Co-authored-by: Nicolas Layne <nicolaslayne@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1530,6 +1530,7 @@
   "_soqP+Z.comment": "Label for description of custom or Function",
   "_srpZD2.comment": "Client ID Label Display Name",
   "_ss5JPH.comment": "Heading Title for a Parameter Without Name",
+  "_sv+IcU.comment": "Message to display when the data map definition can't be generated",
   "_syiNc+.comment": "Browse for file",
   "_sys5gu.comment": "Authentication type",
   "_t+XCkg.comment": "Required string parameter for destination time zone",
@@ -1953,6 +1954,7 @@
   "soqP+Z": "Returns true if either parameter is true",
   "srpZD2": "Client ID",
   "ss5JPH": "New parameter",
+  "sv+IcU": "Unable to generate data map definition",
   "syiNc+": "Browse",
   "sys5gu": "Client Certificate",
   "t+XCkg": "Required. A string that contains the time zone name of the destination time zone. See https://msdn.microsoft.com/en-us/library/gg154758.aspx for details.",
